k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-saludo
  labels:
    app: saludo
spec:
  replicas: 2 # Vamos a correr 2 instancias para probar la alta disponibilidad
  selector:
    matchLabels:
      app: saludo
  template:
    metadata:
      labels:
        app: saludo
    spec:
      containers:
      - name: saludo-container
        image: python:3.11-slim # Usaremos una imagen base por ahora para probar el flujo
        command: ["python", "-c"]
        args: ["import time; print('¡Hola Ekumen desde K8s!'); time.sleep(3600)"]
---
apiVersion: v1
kind: Service
metadata:
  name: saludo-service
spec:
  selector:
    app: saludo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
